# gta-api-core

./: .gitignore  3rd-party-notices.md  README.md  meson.build  meson_options.txt  sonar-project.properties
.github/workflows/: main.yml  sonar.yml  style-check.sh
platform/: gta_linux.c  gta_linux.h  gta_windows.c  gta_windows.h
src/: gta_api.c  meson.build
subprojects/: gta_headers.wrap
subprojects/packagefiles/gta_headers/: meson.build
test/: meson.build  test_framework.c
test/unittest_gta_provider/: meson.build  unittest_gta_provider.c
util/: gta_list.c  gta_list.h  gta_memset.c  gta_memset.h  meson.build
