#;**********************************************************************;
# SPDX-License-Identifier: Apache-2.0
#
# Copyright (c) 2024, Siemens AG
#
#;**********************************************************************;

unittest_gta_provider_files = files (
  'unittest_gta_provider.c',
)

unittest_gta_provider_static = static_library('unittest_gta_provider',
    unittest_gta_provider_files,
    dependencies : dep_gta_headers,
)
